--- a/github/workflows/deploy.yml
+++ b/github/workflows/deploy.yml
@@ -46,7 +46,7 @@ jobs:
         with:
           python-version: '3.10'
 
-      # 3. 파이썬 파일 실행 (main.py가 있다는 가정 하에)
+      # 3. 파이썬 파일 실행 (app.py가 있다는 가정 하에)
       - name: Run script
-        run: python main.py
+        run: python app.py
 
